# biral

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
src/: config.cpp  config.hpp  event.cpp  event.hpp  main.cpp  profile.cpp  profile.hpp
